--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -1637,6 +1637,7 @@ FRA_german_intervention_trigger:0 "Intervention in France"
 FRA_french_local_investments:0 "Union of Economic Interests Investements"
 FRA_french_local_investments_desc:0 "The Union of Economic Interests is a liberal employers' organization supporting the demands of small and medium-sized businesses."
 
+generic_local_investments:0 "Local Investements"
 FRA_french_local_investments_non_UEII:0 "Local Investements"
 FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
 
