--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -7440,7 +7440,7 @@ FRA_ministery_of_national_defense_desc:0 "Emperor Napoleon wanted to create a mi
  FRA_dismantle_the_rhine_desc:0 "Dismantle the Rhine"
 
  FRA_interwar_latin_alliance:0 "Latin Alliance"
- FRA_interwar_latin_alliance_desc:0 ""
+ FRA_interwar_latin_alliance_desc:0 "The fall of the Russian Empire and the obvious hostility of the British Empire forces us to adapt our foreign policy and find new allies. If it seems unconscionable to align ourselves with the Germans, we can always ally ourselves with our Latin partners, notably Spain and Italy."
 
  FRA_interwar_rural_investments:0 "Rural Investments"
  FRA_interwar_rural_investments_desc:0 "The budget surplus caused by the payment of German reparations makes it possible to revitalize our rural economy and revive our heavy industry."
