--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1417,6 +1417,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  GER_kress_von_kressenstein:0 "Friedrich Kreß von Kressenstein"
  GER_august_bebel:0 "August Bebel"
  GER_french_military_government:0 "Französische Militärverwaltung"
+ RHN_josef_friedrich_matthes:0 "Josef Friedrich Matthes"
  GER_wilhelm_filchner:0 "Wilhelm Filchner"
  GER_workers_councils:0 "Zentralrat"
  GER_friedrich_von_bernhardi:0 "Friedrich von Bernhardi"
