--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -14479,3 +14479,11 @@ FRA_emperor_will_appoint_a_prime_minister:0 "§YEmperor Louis Napoléon§! will 
  ww1_france.441.t:0 "French Annexation of Sarre"
  ww1_france.441.d:0 "[FRA.getNameDefCap] ordered the annexation of the Saarland region, a small iron-rich and heavily industrialized German border territory. The government of [FRA.getLeader] justified its action by the need to compensate for Germany's inability to pay its immense reparations.\n\nThis plan is similar to that which the German Empire had fomented during the Kreuznach conference in 1917, that is to say to annex the French zone of Briey."
  ww1_france.441.a:0 "France is sinking into the most radical imperialism..."
+
+ ww1_france.442.t:0 "Resistance in Sarre"
+ ww1_france.442.d:0 "The occupation of the Saarland encountered opposition from the local populations. Fiercely attached to the empire, the Saarland resisted the establishment of local civil administration. The introduction of French and the change of flags was not accepted by the locals. In addition to the resistance, a large part of the population left the territory, joining neighboring German regions."
+ ww1_france.442.a:0 "Concerning..."
+
+ ww1_france.443.t:0 "Establishment of Rhine Republic"
+ ww1_france.443.d:0 "The French occupation zone in Germany changed status, becoming an independent republic of Germany. This Réanian nationalism was stimulated by the policies of Josef Friedrich Matthes and the barely concealed complacency of the French state which immediately offered a protectorate and significant funding for the establishment of a nation."
+ ww1_france.443.a:0 "Another French puppet..."
