--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -439,4 +439,5 @@
  melanchonic_king:0 "Melanchonic King"
  charismatic_prime_minister:0 "Charismatic Prime Minister"
  bonaparte_legacy:0 "Bonaparte Legacy"
+ bonaparte_legacy_louis:0 "Bonaparte Legacy"
  minister_of_national_defense:0 "Minister of National Defense"
