RAJ Post-war historical tree aesthetic UPDATE

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10499,6 +10499,67 @@ RAJ_fight_for_the_empire_desc:0 ""
 RAJ_towards_dominionship:0 "Indian Constitution Act"
 RAJ_towards_dominionship_desc:0 ""
 
+RAJ_reading_policies:0 "Reading Policies"
+RAJ_reading_policies_desc:0 ""
+RAJ_reforms_the_ics:0 "Reform the Indian Civil Service"
+RAJ_reforms_the_ics_desc:0 ""
+RAJ_direct_appointments:0 "Direct Appointments"
+RAJ_direct_appointments_desc:0 ""
+RAJ_lee_commission:0 "Lee Commission"
+RAJ_lee_commission_desc:0 ""
+RAJ_allow_indians_within_the_imperial_police:0 "Allow Indians Within the Imperial Police"
+RAJ_allow_indians_within_the_imperial_police_desc:0 ""
+RAJ_split_the_central_civil_services:0 "Split the Central Civil Services"
+RAJ_split_the_central_civil_services_desc:0 ""
+RAJ_central_superior_services:0 "Central Superior Services"
+RAJ_central_superior_services_desc:0 ""
+RAJ_indian_civil_service_examination:0 "Indian Civil Service Examination"
+RAJ_indian_civil_service_examination_desc:0 ""
+RAJ_public_service_commission:0 "Public Service Commission"
+RAJ_public_service_commission_desc:0 ""
+RAJ_careful_conciliation:0 "Careful Conciliation"
+RAJ_careful_conciliation_desc:0 ""
+RAJ_implement_the_montagu_chelmsford_reforms:0 "Implement the Montagu-Chelmsford Reforms"
+RAJ_implement_the_montagu_chelmsford_reforms_desc:0 ""
+RAJ_disrupt_communal_politics:0 "Dispurt Communal Politics"
+RAJ_disrupt_communal_politics_desc:0 ""
+RAJ_arrest_ghandi:0 "Arrest Mahatma Ghandi"
+RAJ_arrest_ghandi_desc:0 ""
+RAJ_princely_politics:0 "Princely Politics"
+RAJ_princely_politics_desc:0 ""
+
+RAJ_review_our_foreign_policy:0 "Review our Foreign Policy"
+RAJ_review_our_foreign_policy_desc:0 ""
+RAJ_support_the_white_movement:0 "Support the White Movement"
+RAJ_support_the_white_movement_desc:0 ""
+RAJ_malleson_mission:0 "Malleson Mission"
+RAJ_malleson_mission_desc:0 ""
+RAJ_treaty_of_rawalpindi:0 "Treaty of Rawalpindi"
+RAJ_treaty_of_rawalpindi_desc:0 ""
+RAJ_treaty_of_kabul:0 "Treaty of Kabul"
+RAJ_treaty_of_kabul_desc:0 ""
+RAJ_pacify_the_graveyard:0 "Pacify the Graveyard"
+RAJ_pacify_the_graveyard_desc:0 ""
+RAJ_integrate_afghanistan:0 "Integrate Afghanistan"
+RAJ_integrate_afghanistan_desc:0 ""
+RAJ_extend_the_raj_glorious_grip:0 "Extend the Raj's Glorious Grip"
+RAJ_extend_the_raj_glorious_grip_desc:0 ""
+RAJ_form_the_indian_integration_service:0 "Form the Indian Integration Service"
+RAJ_form_the_indian_integration_service_desc:0 ""
+RAJ_french_delegation:0 "French Delegation"
+RAJ_french_delegation_desc:0 ""
+RAJ_negotiate_pondicherry:0 "Negotiate Pondicherry"
+RAJ_negotiate_pondicherry_desc:0 ""
+RAJ_pressure_portuguese_governement:0 "Pressure the Portuguese Government"
+RAJ_pressure_portuguese_governement_desc:0 ""
+
+RAJ_act_of_the_indian_legislature:0 "Act of the Indian Legislature"
+RAJ_act_of_the_indian_legislature_desc:0 "The recent changes in India have prompted the government to consider a new act which would encompass both economic and social reforms. This package would effectively alleviate the burden imposed on the people both during and after the Great War. It is noteworthy that, despite its name, the act has no direct relevance to the Legislature."
+RAJ_fiscal_reforms:0 "Fiscal Reforms"
+RAJ_fiscal_reforms_desc:0 ""
+RAJ_social_reforms:0 "Social Reforms"
+RAJ_social_reforms_desc:0 ""
+
 # Albania
  ALB_the_emergence:0 "The Emergence"
  ALB_the_emergence_desc:0 "We are finally a free nation, after an entire era of foreign rule. We need to start setting up our nation."
