--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -1630,6 +1630,8 @@
  FNG_focus_annex_jiangsu_desc:0 "[JNC.GetLeader] is supposed to hand over his ruled provinces but he is not obeying, that means he needs to be punished!"
  FNG_focus_secure_peking:0 "Secure Peking"
  FNG_focus_secure_peking_desc:0 "[GMJ.GetLeader] deployed his troops too near to Peking. This danger must be eliminated."
+ FNG_focus_finish_unloyal_warlords:0 "Finish Unloyal Warlords"
+ FNG_focus_finish_unloyal_warlords_desc:0 ""All your China are belong to us.""
 
  GER_weltpolitik:0 "Weltpolitik"
  GER_weltpolitik_desc:0 "We must enforce our Kaiser's divine right to rule over our Empire. He will lead us and the Empire towards glory!"
