--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -191,8 +191,8 @@
  osman_fuad_1:0 "Ambitious Sultan"
  osman_fuad_2:0 "Kayser-i Rûm"
  grand_vizier:0 "Grand Vizier"
- grand_vizier_mehmed_said:0 "Grand Vizier"
- grand_vizier_said_halim:0 "Grand Vizier"
+ TUR_conservative_ittihadist:0 "Conservative İttihadist"
+ TUR_national_industrialist:0 "National Industrialist"
  grand_vizier_empowered:0 "Grand Vizier"
  TUR_hero_of_freedom:0 "Hero of Freedom"
  sultan_unifier:0 "Sultan-Unifier"
@@ -264,6 +264,7 @@
  TUR_ruthless_revanchist:0 "Ruthless Revanchist"
  TUR_ruthless_revanchist_leader:0 "Empowered Revanchist"
  TUR_butcher:0 "Kasap Cemâl"
+ TUR_directorate_of_forensic_medicine:0 "Directorate of Forensic Medicine"
  TUR_connections_on_all_sides:0 "Connections on all Sides"
  TUR_military_authority:0 "Military Authority"
  TUR_unionist_minister:0 "Unionist Minister"
