--- a/localisation/english/ww1_unit_medals_l_english.yml
+++ b/localisation/english/ww1_unit_medals_l_english.yml
@@ -23,6 +23,7 @@
  KOR_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_3:0 "Bujang"
  KOR_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_4:0 "Bujang"
 
+CHL_medal_of_the_century:0 "Medal Of The Century"
 CHL_DIVISION_EXPERIENCE_TITLE_ARMY_EXPERIENCE_0:0 "Coronel"
 
 
