--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -924,7 +924,7 @@
  HUN_fascism_party:0 "MOVE"
  HUN_fascism_party_long:0 "Magyar Országos Véderő Egylet"
  
- ROM_neutrality_party:0 "Casa Hohenzollern"
+ ROM_neutrality_party:0 "Casa De Hohenzollern"
  ROM_neutrality_party_long:0 "Casa Hohenzollern-Sigmaringen"
  ROM_communism_party:0 "PSDR"
  ROM_communism_party_long:0 "Partidul Social Democrat din România"
