--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -1695,7 +1695,7 @@ CHL_mapocho_station:0 "Found The Mapocho Station"
 CHL_mapocho_station_desc:0 "gotta make trains go fast"
 CHL_biblioteca_nacional:0 "Found The National Library"
 CHL_biblioteca_nacional_desc:0 "we'll stop this shitty thing called ignorance "
-CHL_railways_from_north_to_south:0 "Railways From North To South"
+CHL_railways_from_north_to_south:0 "The Longitudinal Railway "
 CHL_railways_from_north_to_south_desc:0 "yay! now we got Railways From North To South"
 chl_la_longitud_norte_done:0 "Requires La Longitud Norte"
 CHL_alameda_station:0 "Found The Alameda Station"
