--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4316,6 +4316,17 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  AUH_ottoman_debt_yes_opposite_remove:0 "\n(§Y[AUH.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?AUH.opda_consumer_goods|.1%Y]"
  RUS_ottoman_debt_yes_opposite_remove:0 "\n(§Y[RUS.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?RUS.opda_consumer_goods|.1%Y]"
  USA_ottoman_debt_yes_opposite_remove:0 "\n(§Y[USA.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?USA.opda_consumer_goods|.1%Y]"
+ ottoman.111.t:0 "The Caliph Ask our Help Against the Italians"
+ ottoman.111.d:0 "As the Italians have started their invasion of Trablusgarp, the Caliph of Islam on behalf of the Ottoman empire has asked our involvement in the conflict on their side."
+ ottoman.111.a:0 "We'll help our borthers against infidel invaders."
+ ottoman.111.b:0 "The Caliph's words has no validity in these lands."
+ TUR_defied_the_caliph:0 "Defied the Caliph"
+ ottoman.112.t:0 "Senussi Order has Answered our Call"
+ ottoman.112.d:0 "As we're embroiled in war with Italy, we've asked for the help of rather influential Senussi order in our struggle. Thankfully, they've answered our call and stated that they're ready to fight on our side."
+ ottoman.112.a:0 "Together we'll defend Trablusgarp."
+ ottoman.113.t:0 "Senussi Order Rejects our Call"
+ ottoman.113.d:0 "Though we're embroiled in war with the Italians in Trablusgarp, our call for help to the Senussi order has been rejected."
+ ottoman.113.a:0 "Aren't they scared of Allah?"
 
  TUR_ottoman_armenian_minority_modify_attrition_negative_15:0 "Modify £ww1_flag_ARM §YArmenian Minority§! as: Division Attrition: §R+15.00%§!"
  TUR_ottoman_greek_minority_modify_attrition_negative_15:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! as: Division Attrition: §R+15.00%§!"
