--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2792,8 +2792,8 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  GRE_greek_resistance:0 "Greek Resistance"
 
  #Sennusi
- LBA_Senussi_Order:0 "Senussi Order"
- LBA_Senussi_Order_desc:0 "We win or we die."
+ LBA_senussi_order:0 "Senussi Order"
+ LBA_senussi_order_desc:0 "We win or we die."
  LBA_traders_of_east_sahara:0 "Traders of East Sahara"
  
  #Wadai
