--- a/localisation/english/ww1_game_rules_l_english.yml
+++ b/localisation/english/ww1_game_rules_l_english.yml
@@ -64,8 +64,8 @@ RULE_OPTION_STATEMATE_DESC:0 "Bulgaria will peace out with honor, losing some te
  RULE_OPTION_WAR_ON_ALBANIA:0 "War On Albania"
  RULE_OPTION_WAR_ON_ALBANIA_DESC:0 "The Great War will be fired on Albania."
 
- MOROCCAN_REVOLUTION:0 "Annexation of Morocco"
- MOROCCAN_REVOLUTION_FIRED:0 "Moroccan Revolution"
+ MOROCCAN_REVOLUTION:0 "@MOR @FRA Annexation of Morocco"
+ MOROCCAN_REVOLUTION_FIRED:0 "@MOR Moroccan Revolution"
  MOROCCAN_REVOLUTION_FIRED_DESC:0 "Moroccan AI will refuse being turned into a protectorate, causing a war with France."
  RULE_OPTION_DEFAULT_MOROCCAN_REVOLUTION_DESC:0 "AI will follow to mimic historical events in their conditions."
 
