ww1 german victory portuguese colonial border option

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -8002,6 +8002,10 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_germany.171.t:0 "French Annexation of the Republic of Alsace-Lorraine"
  ww1_germany.171.d:0 "There was a German seamen insurgency in Alsace-Lorraine which established the Soldiers' Council of Strasbourg, and took control of the city. A council of workers and soldiers was then established, with the leader of the brewery workers' union presiding. Red flags flew all over the city, including on the spire of the cathedral. An amnesty was declared, and freedom of the press was proclaimed. Factory workers went on strike, demanding higher wages; the Councils raised wages by decree against the opposition of the factory owners. The Social Democratic Party leader in Strasbourg, Jacques Peirotes, then asked the French generals to send in their troops to restore order.\nToday, French soldiers under the command of general Henri Gouraud entered the suburbs of Strasbourg, strikes were terminated by force, and agitators were arrested."
  ww1_germany.171.a:0 "Incorporate the state."
+ ww1_germany.172.t:0 "German Angola-Mozambique Concept?"
+ ww1_germany.172.d:0 "Now that we are at war with Portugal, we also have the expectation that if we are victorious, we can claim the Portuguese African colonies. But this cannot be done without a plan prepared beforehand."
+ ww1_germany.172.a:0 "We'll take the hinterlands."
+ ww1_germany.172.b:0 "We'll annex them all."
  
 
 
