--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -3572,7 +3572,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  TUR_yusuf_izzeddin:0 "Yusuf İzzeddin"
  TUR_ali_ihsan_bey:0 "Ali İhsan Bey"
  TUR_ali_ihsan:0 "Ali İhsan Paşa"
- TUR_cemil_ucman:0 "Yüzbaşı Cemil Bey"
+ TUR_cemil_ucman:0 "Cemil Bey"
  TUR_sureyya_ilmen:0 "Ferik Süreyya Paşa"
  TUR_refik_nevzat:0 "Refik Nevzat Bey"
  TUR_ibrahim_hakki:0 "İbrahim Hakkı Paşa"
