--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -138,7 +138,7 @@
  professor_lawyer_arab:0 "Lawyer Professor"
  journalist_arab:0 "Journalist"
  TUR_leftist_parliament:0 "Leftist Parliament"
- TUR_milliyetci_sosyalist_advisor:0 "Nationalist Socialist"
+ TUR_nationalist_socialist:0 "Nationalist Socialist"
  TUR_milliyetci_sosyalist:0 "Nationalist Socialist"
  TUR_chairman:0 "Chairman"
  TUR_conservative_politician:0 "Conservative Politician"
@@ -146,44 +146,46 @@
  TUR_conservative_politician_advisor:0 "Conservative Islamist Figurehead"
  TUR_positivist:0 "Positivist"
  HJZ_hussein_bin_ali_ottoman_trait:0 "Sharif and Emir of Mecca"
- TUR_marshal_vezier:0 "Anti-War Candidate"
+ TUR_anti_war_candidate:0 "Anti-War Candidate"
  nationalist_poet_arab:0 "Nationalist Poet"
  revolutionary_lawyer:0 "Revolutionary Lawyer"
  TUR_fransiz_ekolu:0 "Fransız Ekolü"
  TUR_early_era_socialist:0 "Early Era Socialist"
- mustafasuphi:1 "Milli Lenin"
+ TUR_milli_lenin:1 "Milli Lenin"
  nihad:0 "Unifier of the People"
- kamil:0 "İngiliz Kamil"
- tevfik:0 "Ottoman Gentlemen"
- huseyin_hilmi_vizier:0 "Progressive Statesman"
+ TUR_ingiliz_kamil:0 "İngiliz Kamil"
+ TUR_non_partisan_candidate:0 "Non-Partisan Candidate"
+ TUR_dignified_statesman:0 "Dignified Statesman"
  TUR_ismail_kemal_trait:0 "Representor of Minorities"
- riza_nur_trait:0 "Leftist Nationalist"
- riza_tevfik_trait:0 "Feylesof Rıza"
- abdulaziz_mecdi_trait:0 "Mutasavvıf"
- mehmet_sadik_trait:0 "Experienced Merchant"
- experimented_merchant:0 "Experienced Merchant"
- decentralist_liberal:0 "Decentralist Liberal"
+ TUR_pluralist_nationalist:0 "Pluralist Nationalist"
+ TUR_pluralist_nationalist_2:0 "Pluralist Nationalist"
+ TUR_conservative_nationalist:0 "Conservative Nationalist"
+ TUR_feylesof_riza:0 "Feylesof Rıza"
+ TUR_mystic_ittihadist:0 "Mutasavvıf"
+ TUR_mystic_ittihadist_2:0 "Mutasavvıf"
+ TUR_conservative_merchant:0 "Conservative Merchant"
+ TUR_decentralist_liberal:0 "Decentralist Liberal"
  islamist_leader:0 "Radical İslamist"
  collaborator:0 "Concessionist"
- ataturk:0 "Great Reformer"
+ TUR_great_reformer:0 "Great Reformer"
  TUR_anti_imperialist:0 "Anti-Imperialist"
  TUR_harbiye_naziri:0 "Harbiye Nazırı"
  head_of_the_national_movement:0 "Head of the National Movement"
  islamist:0 "Islamist"
- minority_revolutionary:0 "Minority Revolutionary"
- minority_reformer:0 "Minority Reformer"
- islamist_modern:0 "Modern Islamist"
- islamist_modern_leader:0 "Modern Islamist"
- reformist_nationalist:0 "Reformist Nationalist"
+ TUR_minority_revolutionary:0 "Minority Revolutionary"
+ TUR_minority_reformer:0 "Minority Reformer"
+ TUR_modern_islamist:0 "Modern Islamist"
+ TUR_modern_islamist_leader:0 "Modern Islamist"
+ TUR_reformist_nationalist:0 "Reformist Nationalist"
  ebedi_sef:0 "Ebedi Şef"
- istirakci_hilmi:0 "İştirakçi"
+ TUR_istirakci:0 "İştirakçi"
  TUR_monopoly:0 "Tobacco Monopoly"
- TUR_turk_marx:0 "Turkish Marx"
- TUR_turk_marx_advisor:0 "Turkish Marx"
+ TUR_turkish_marx:0 "Turkish Marx"
+ TUR_turkish_marx_leader:0 "Turkish Marx"
  TUR_ittihadist_socialist:0 "İttihatist"
  TUR_just_socialist:0 "Socialist"
  sabahattin:0 "Decentralist Prince"
- ferit:0 "Concessionist"
+ TUR_concessionist:0 "Concessionist"
  three_pashas_2:0 "Anti-Imperialist Cabinet"
  three_pashas:0 "Three Pasha Government"
  TUR_limited_authority:0 "Limited Authority"
@@ -263,7 +265,7 @@
  TUR_national_hero:0 "National Hero"
  TUR_ruthless_revanchist:0 "Ruthless Revanchist"
  TUR_ruthless_revanchist_leader:0 "Empowered Revanchist"
- TUR_butcher:0 "Kasap Cemâl"
+ TUR_kasap_cemal:0 "Kasap Cemâl"
  TUR_directorate_of_forensic_medicine:0 "Directorate of Forensic Medicine"
  TUR_connections_on_all_sides:0 "Connections on all Sides"
  TUR_military_authority:0 "Military Authority"
@@ -272,16 +274,17 @@
  TUR_pragmatic_reformist_leader:0 "Pragmatic Reformist"
  linchpin_of_infrastructure2:0 "Linchpin of Infrastructure"
  TUR_kucuk_efendi:0 "Küçük Efendi"
+ TUR_resistance_organizer:0 "Resistance Organizer"
  TUR_cautious_reformist:0 "Cautious Reformist"
  TUR_three_pasha_locked_tt:0 "§YA member of the Triumvirate cannot be manually replaced or removed.§!"
- erudite_ideologue:0 "Erudite Ideologue"
+ TUR_ahmet_riza:0 "Erudite Ideologue"
  diplomatic_minister:0 "Diplomatic Minister"
  puppet_grand_vizier:0 "Puppet Grand Vizier"
  catalanist_lerrouxist:0 "Catalanist Lerrouxist"
- pan_nationalist_doctor:0 "Pan-Nationalist Doctor"
+ TUR_pan_nationalist_doctor:0 "Pan-Nationalist Doctor"
  mehmed_v:0 "Mehmed V Reşât"
  mehmed_vi:0 "Mehmed VI Vahideddin"
- freedom_poet:0 "Freedom Poet"
+ TUR_freedom_poet:0 "Freedom Poet"
  hero_of_CUP_trials:0 "Hero of the CUP trials"
  ENG_interim_ruler:0 "Interim Ruler"
  ENG_warhawk:0 "Warhawk"
@@ -310,7 +313,7 @@
  proto_fascist:0 "Proto-Fascist"
  armoured_warfare_theorist:0 "Armoured Warfare Theorist"
  afrika_herzog:0 ""Der Afrika-Herzog""
- liberal_economist:0 "Liberal Economist"
+ TUR_liberal_economist:0 "Liberal Economist"
  LIB_puppet_of_barclay:0 "§OPuppet of Arthur Barclay§!"
  strong_woman_of_the_italian_socialism:0 "Strong Woman of the Italian Socialism"
  revolutionary_syndicalist:0 "Revolutionary Syndicalist"
@@ -426,7 +429,7 @@
  scouting_pioneer:0 "Scouting Pioneer"
  grandfather_of_the_russian_revolution:0 "Grandfather of the Russian Revolution"
  airship_manufacturer:0 "Airship Manufacturer"
- ittihadist_ideologue:0 "İttihadist Ideologue"
+ TUR_ittihadist_ideologue:0 "İttihadist Ideologue"
  siberian_machiavelli:0 "Siberian Machiavelli"
  dealbreaker:0 "Dealbreaker"
  fra_homme_de_la_defaite:0 "Homme de la Défaite"
@@ -447,4 +450,5 @@
  TUR_the_victorious_tt:0 "  - Effects when more than §Y5%§! surrender progress:\nGets event '§YAhmed Muhtar Paşa Resigns§!'"
  TUR_head_of_the_paramilitary:0 "Head of the Paramilitary"
  melanchonic_king:0 "Melanchonic King"
+ TUR_sympathetic_to_the_nationalist_cause:0 "Sympathetic to the Nationalist Cause"
  
