fixes and tweaks

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -1513,7 +1513,7 @@ FRA_german_intervention_trigger:0 "Intervention in France"
  ww1_france.338.a:0 "Charge them with the cavalry!"
  ww1_france.338.b:0 "We cant risk any fuhrer escalation..."
 
- ww1_france.339.t:0 "Moussa ag Amastan visit France"
+ ww1_france.339.t:0 "Moussa ag Amastan visits France"
  ww1_france.339.d:0 "The Touareg mission is a set of meetings, invitations and diplomatic events aimed at improving relations between the metropolis and the territories of North Africa. To continue this good neighborly operation, the Tuareg chief Moussa ag Amastan was invited to visit Paris, then Burgundy. Highly respected among the other tribes of Algeria. His trip promises to ease local tensions for a while."
  ww1_france.339.a:0 "Bienvenue!"
 
