--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -6850,7 +6850,7 @@ FRA_ww1_reform_the_reserve_territoriale_desc:0 "The Barthou law can be amended t
  FRA_join_democrats_socialists:0 "\nSelecting §Ythis focus§! will place us in the role of §Ythe Democratic Republican Alliance§!. \n\n§ROur alliance will combine moderate socialists and radicals seats!§!"
  FRA_get_democrats_socialists_seats:0 "Socialists-Democrats represent [?democrat_socialist_alliance|Y0] seats."
 
- FRA_join_popular_liberal_action:0 "\nSelecting §Ythis focus§! will place us in the role of §gthe Popular Liberal Action§!."
+ FRA_join_popular_liberal_action:0 "\nSelecting §Ythis focus§! will place us in the role of §gThe Popular Liberal Action§!."
  FRA_get_popular_liberal_action_seats:0 "Monarchists represent [?popular_liberal_action|Y0] seats."
 
  FRA_join_republicain_federation:0 "\nSelecting §Ythis focus§! will place us in the role of §2Republicain Federation§!."
@@ -6864,7 +6864,7 @@ FRA_ww1_reform_the_reserve_territoriale_desc:0 "The Barthou law can be amended t
 
  FRA_no_more_parliament_tt:0 "§RNext elections will be suspended until a new constitution is drafted.§!"
 
- FRA_join_democrats_socialists_2:0 "\nSelecting §Ythis focus§! will place us in the role of §Cthe Radical Party§!. \n\n§ROur alliance will combine moderate socialists and radicals seats!§!"
+ FRA_join_democrats_socialists_2:0 "\nSelecting §Ythis focus§! will place us in the role of §CThe Radical Party§!. \n\n§ROur alliance will combine moderate socialists and radicals seats!§!"
 
  FRA_ww1_meline_agricultural_reforms:0 "Méline Agricultural Reforms"
  FRA_ww1_meline_agricultural_reforms_desc:0 "The Republican deputy Jules Méline proposed a series of agricultural reforms intended to support farmers by postponing the payment of their debts, by offering them low-rate loans or by promoting the creation of shared social funds."
@@ -6933,7 +6933,7 @@ FRA_SFIO_and_radicals_will_oppose_this:0 "\n§R§OSFIO§! and §OIndependant Soc
  FRA_ww1_fund_science_po_desc:0 "The Free School of Political Sciences (ELSP), colloquially known as “Sciences Po”, is a private French higher education establishment created in 1871 by Émile Boutmy. It trains some of the republic's senior executives, as well as certain major industrialists and politicians. Funding and expanding the activities of this school will enable technological, societal and cultural innovation."
 
  FRA_ww1_antagonize_sfio:0 "Antagonize SFIO"
- FRA_ww1_antagonize_sfio_desc:0 "The popularity of radical left-wing movements has greatly increased over the past 15 years. the SFIO promises an emancipation of workers which will only lead to industries and the state. Their anti-army, anti-state and anti-capitalist program must be exposed."
+ FRA_ww1_antagonize_sfio_desc:0 "The popularity of radical left-wing movements has greatly increased over the past 15 years. the SFIO promises an emancipation of workers which will only lead to the destruction of the state. Their anti-army, anti-state and anti-capitalist program must be exposed."
 
  FRA_ww1_sponsor_pla_af_fusion:0 "Sponsor PLA-AF Fusion"
  FRA_ww1_sponsor_pla_af_fusion_desc:0 "The two main monarchist parties are opposed on questions relating to the functioning of a state. Due to the pope's disapproval of popular liberal action, a merger should take place within French action, in order to unite the supporters within a more powerful party."
