--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -354,11 +354,11 @@
  FRA_1910_disposition_desc:0 "The national assembly is constituted every 4 years. The elections are being held shortly and will redefine the distribution of seats."
  FRA_jaures_speech_desc:0 "§YJean Jaurès§! will organize a large socialist rally on the eve of the elections, ensuring greater support from the people for the parties of the far left. \n\n§RSFIO§! will gain §Y50§! additional seats." 
  FRA_aristide_briand_rally:0 "Aristide briand's Rally"
- FRA_aristide_briand_rally_desc:0 "§YAristide Briand§! will organize a rally of moderate socialist parties and left-wing democrats. \n\n§YThe democratic Republican Alliance§! will gain §Y50§! additional seats."
+ FRA_aristide_briand_rally_desc:0 "§YAristide Briand§! will organize a rally of moderate socialist parties and left-wing democrats. \n\n§YThe Democratic Republican Alliance§! will gain §Y50§! additional seats."
  FRA_aristide_briand_rally_citation:0 "“Il est un droit supérieur à tous les autres, c'est le droit de vivre d'une collectivité nationale. Pour défendre l'existence de la nation, s'il avait fallu aller jusqu'à l'illégalité, je n'aurais pas hésité.“"
 
  FRA_royalist_demonstration_in_versailles:0 "Léon Daudet's Royalist Demonstration In Versailles"
- FRA_royalist_demonstration_in_versailles_desc:0 "§YLéon Daudet§! will gather the supporters of the monarchy and launch a massive procession in Versailles.\n\n§gThe popular liberal action§! will gain §Y50§! additional seats"
+ FRA_royalist_demonstration_in_versailles_desc:0 "§YLéon Daudet§! will gather the supporters of the monarchy and launch a massive procession in Versailles.\n\n§gThe Popular Liberal Action§! will gain §Y50§! additional seats"
  Jacques_piou_citation:0 "“Le peuple a besoin d'une figure d'autorité supérieure, gardienne de la nation, gardée par la nation. C'est un ouvrage mérité par les Français, offert par Dieu.“"
 
  FRA_1914_disposition:0 "1914 Disposition"
@@ -856,7 +856,7 @@ FRA_exceptional_loan_to_indochina_ended:0 "Investments are done"
 
  FRA_important_law_that_will_comeback:0 "\nIf this law is not passed, it will be proposed again in 60 days, until it is passed by the §Yparliament§! and the §Ysenate§!"
 
-FRA_too_much_reform_can_break_the_coalition:0 "§RPushing the Reforms too far can lead to the coalition breakout.§!"
+FRA_too_much_reform_can_break_the_coalition:0 "§RPushing the reforms too far could lead to the moderates of the coalition leaving.§!"
 
 FRA_far_right_leave_coalition:0 "§LNationalists§! will leave our §YConservative Alliance§!, making us lose [?nationalist|Y0]§R seats.§!"
 FRA_SFIO_leave_coalition:0 "§RSFIO§! will leave our §YConservative Alliance§!, making us lose [?SFIO|Y0]§R seats.§!"
