--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -1057,7 +1057,7 @@
  ww1_france.230.d:0 "A cohort of parliamentarians, supported by the opposition, have announced their departure from the radical socialist party. This news is bad, the leftist party has always been a powerful ally in controlling parliament. Fortunately, the president of the radical party, Joseph Caillaux, assured his full support for the government."
  ww1_france.230.a:0 "It was inevitable"
  FRA_republican_federation_leaving_democratic_bloc:0 "The §BRepublican Federation§! is leaving the §Ydemocratic bloc§!, making us lose §R[?republicain_federation] seats§!."
- FRA_radical_party_is_losing_support:0 "The §CRadical-Socialist Party§! §Rlose 50 parliamentaries§!. Theses parliamentaries join the §gConservative party§!."
+ FRA_radical_party_is_losing_support:0 "The §CRadical-Socialist Party§! §Rlose 50 parliamentaries§!. Theses parliamentaries join the §2Conservative party§!."
  FRA_radical_party_leaving_democratic_bloc:0 "The §CRadical-Socialist Party§! is leaving the §Ydemocratic bloc§!, making us lose §R[?radical_party] seats§!."
  FRA_independent_radicals_leaving_democratic_bloc:0 "§1Independent Radicals§! are leaving the §Ydemocratic bloc§!, making us lose §R[?independent_radicals] seats§!."
  FRA_independants_socialist_offer_support:0 "The §OIndependent Socialists§! join the §Ydemocratic bloc§!, making us gain §G[?independent_socialist] seats§!."
@@ -1069,7 +1069,7 @@
  ww1_france.234.a:0 "Raymond Poincaré is an experienced leader"
  ww1_france.234.b:0 "Jules Pams won"
  ww1_france.234.c:0 "Left and far left supporters elect Edouard Vaillant"
- FRA_caillaux_traitor:0 "§YJoseph Caillaux§! will join the opposition, making us lose §R50 seats§!. Theses parliamentaries join the §gConservative party§!."
+ FRA_caillaux_traitor:0 "§YJoseph Caillaux§! will join the opposition, making us lose §R50 seats§!. Theses parliamentaries join the §2Conservative party§!."
  ww1_france.235.t:0 "Caillaux Affair"
  ww1_france.235.d:0 "A case has just broken out and is now causing controversy throughout France. The former minister and leading politician of the radical party have been accused by multiple articles of numerous crimes. In this list, we find corruption, foreign financing of his campaigns, a policy aligned with Germany and a case of infidelity. These elements were put forward by the journalist Gaston Calmette, the president of "Le Figaro", a very popular newspaper. Hearing the news, Caillaux became enraged, especially since all these accusations are accompanied by overwhelming evidence."
  ww1_france.235.a:0 "Caillaux's wife, Henriette, assassinate Gaston Calmette"
