flavor fake news

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -14491,3 +14491,11 @@ FRA_emperor_will_appoint_a_prime_minister:0 "§YEmperor Louis Napoléon§! will 
  ww1_france.443.t:0 "Establishment of Rhine Republic"
  ww1_france.443.d:0 "The French occupation zone in Germany changed status, becoming an independent republic of Germany. This Réanian nationalism was stimulated by the policies of Josef Friedrich Matthes and the barely concealed complacency of the French state which immediately offered a protectorate and significant funding for the establishment of a nation."
  ww1_france.443.a:0 "Another French puppet..."
+
+ ww1_france.444.t:0 "Is Syndicalism Serving Pure Chaos ?"
+ ww1_france.444.d:0 "Several national newspapers carried a similar front-page spread on Monday, discussing the danger of syndicalism, radical socialism and anarchism. Papers such as \"Le Mouvement\", \"Le Figaro\", \"La Libre Parole\" and \"Le Soleil\" jointly denounced the terrorist actions of the far left, in particular by accusing them of wanting to demilitarize the state, destroy Catholic culture and order the French to capitulate to the enemy.\n\nMany more local newspapers and regional prefects have issued similar speeches, extending a message increasingly present in the minds of the French: The SFIO and its ideology is a danger."
+ ww1_france.444.a:0 "And they are, indeed"
+
+ ww1_france.445.t:0 "Communist Terrorism in Provinces"
+ ww1_france.445.d:0 "Several newspapers such as "Action Française" and "Le Figaro" have displayed an impressive list of offenses and crimes committed by radical socialists. Spread over 6 pages, it traces all the abuses committed by supporters of the ultra-left, ranging from theft to premeditated murder. These publications highlight the visceral danger caused by anarchic trade unionist extremism."
+ ww1_france.445.a:0 "They must be stopped"
