will add more characters

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2066,6 +2066,9 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_reopen_itilafist_academies:0 "Reopen İtilafist Academies"
  TUR_reopen_itilafist_academies_desc:0 "İtilafists have proven to be too powerful to being opposed in their military school. Perhaps reopening them would be the wisest choice."
 
+ TUR_cult_of_ittihat_ve_terakki:0 "Cult of İttihat ve Terakki"
+ TUR_cult_of_ittihat_ve_terakki_desc:0 "İttihat ve Terakki Fırkası has established itself as a large party with wide reaching members. Though not all of it's members hold posts in the government, the unofficially retain power and influence the empire. The views and actions of certain individuals within the party shape the actions, thus the future of the empire."
+
  debt_less_than_0:0 "£consumer_goods_texticon  Consumer Goods Factories factor value on §YOttoman Public Debt Administration§! is more than §Y0.0%§!\n" #Our debt is more than §Y0 Thousand Liras§!.
  TUR_dissolve_the_debt_council:0 "Dissolve the Debt Council"
  TUR_declare_moratorium:0 "Declare Moratorium"
@@ -2690,19 +2693,19 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_anti_imperialist_revanchist_struggle_revanchist_medium_control:0 "Medium Revanchist Control"
  TUR_anti_imperialist_revanchist_struggle_revanchist_low_control:0 "Low Revanchist Control"
  TUR_army_civilian_struggle:0 "Army-Civilian Struggle"
- TUR_army_civilian_struggle_army:0 "Army"
- TUR_army_civilian_struggle_civilian:0 "Civilian"
+ TUR_army_civilian_struggle_army:0 "Army Faction"
+ TUR_army_civilian_struggle_civilian:0 "Civilian Faction"
  TUR_third_faction_civilian_struggle_third_faction:0 "Third Faction"
  TUR_army_civilian_struggle_army_balanced:0 "Balanced Influence"
- TUR_army_civilian_struggle_army_high_control:0 "High Army Influence"
- TUR_army_civilian_struggle_army_medium_control:0 "Medium Army Influence"
- TUR_army_civilian_struggle_army_low_control:0 "Low Army Influence"
+ TUR_army_civilian_struggle_army_high_control:0 "High Army Faction Influence"
+ TUR_army_civilian_struggle_army_medium_control:0 "Medium Army Faction Influence"
+ TUR_army_civilian_struggle_army_low_control:0 "Low Army Faction Influence"
  TUR_third_faction_civilian_struggle_third_faction_high_control:0 "High Third Faction Influence"
  TUR_third_faction_civilian_struggle_third_faction_medium_control:0 "Medium Third Faction Influence"
  TUR_third_faction_civilian_struggle_third_faction_low_control:0 "Low Third Faction Influence"
- TUR_army_civilian_struggle_civilian_high_control:0 "High Civilian Influence"
- TUR_army_civilian_struggle_civilian_medium_control:0 "Medium Civilian Influence"
- TUR_army_civilian_struggle_civilian_low_control:0 "Low Civilian Influence"
+ TUR_army_civilian_struggle_civilian_high_control:0 "High Civilian Faction Influence"
+ TUR_army_civilian_struggle_civilian_medium_control:0 "Medium Civilian Faction Influence"
+ TUR_army_civilian_struggle_civilian_low_control:0 "Low Civilian Faction Influence"
  TUR_appoint_liberals:0 "Appoint Liberals"
  TUR_appoint_conservatives:0 "Appoint Conservatives"
  TUR_denounce_war:0 "Denounce War"
