--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -161,8 +161,8 @@
  TUR_pluralist_nationalist_2:0 "Pluralist Nationalist"
  TUR_conservative_nationalist:0 "Conservative Nationalist"
  TUR_feylesof_riza:0 "Feylesof Rıza"
- TUR_mystic_ittihadist:0 "Mutasavvıf"
- TUR_mystic_ittihadist_2:0 "Mutasavvıf"
+ TUR_mystic_ittihadist:0 "Mystic İttihadist"
+ TUR_mystic_ittihadist_2:0 "Mystic İttihadist"
  TUR_conservative_merchant:0 "Conservative Merchant"
  TUR_decentralist_liberal:0 "Decentralist Liberal"
  islamist_leader:0 "Radical İslamist"
@@ -451,4 +451,6 @@
  TUR_head_of_the_paramilitary:0 "Head of the Paramilitary"
  melanchonic_king:0 "Melanchonic King"
  TUR_sympathetic_to_the_nationalist_cause:0 "Sympathetic to the Nationalist Cause"
+ TUR_general_secretary_of_ittihadists:0 "General Secretart of İttihadist"
+ TUR_ittihadist_propagandist:0 "İttihadist Propagandist"
  
