--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -865,7 +865,7 @@
  TUR_turkish_communist_party_long:0 "Türk Komünist Fırkası"
  TUR_sultanate_party:0 "Devlet-i Ebed-müddet"
  TUR_sultanate_precursor_party:0 "Geçici Hükûmet"
- TUR_ottoman_dynasty_party:0 "Osmanoğlu Dynasty"
+ TUR_ottoman_dynasty_party:0 "Osmanlı Hanedanı"
  TUR_cancelation_of_annexation_party:0 "Redd-i İlhak"
  TUR_cancelation_of_annexation_party_long:0 "Redd-i İlhak Cemiyeti"
  TUR_renewal_party:0 "TF"
