--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4957,7 +4957,8 @@
  TUR_appointment_through_capability_tt:0 "Modify §YSecond Constitutional Era§! by\n£political_power_texticon  Political Power Gain: §G+5%§!\n£stability_texticon  Stability: §R-5.00%§!\n£stability_popularity_texticon  Party Popularity Stability Modifier: §R-10.00%§!\n\n"
  TUR_autonomy_in_administration_tt:0 "Modify §YSecond Constitutional Era§! by\n£stability_popularity_texticon  Party Popularity Stability Modifier: §G+10.00%§!\n\nWe'll get several §Yevents§! about the §Yadministration§! of specific §Yvilayets§! within our empire. The decision we chosoe will have impacts on both the §Ystate§! itself, as well as the makeup of our §Yconstitution§!."
  TUR_promote_effective_governors_tt:0 "Modify §YSecond Constitutional Era§! by\n£stability_popularity_texticon  Party Popularity Stability Modifier: §R-10.00%§!\n£conscription_laws_cost_texticon  Conscription Laws Cost: §G-25%§!\n£trade_laws_cost_texticon  Trade Laws Cost: §G-25%§!\n£economy_laws_cost_texticon  Economy Laws Cost: §G-25%§!\n\n"
- TUR_inner_party_cult_tt:0 "Several §Yadvisors§! would be able to §Yhired§! outside of §YPolitical Advisor§! slots, with each impacting our §Yconstitution§!."
+ TUR_inner_party_cult_tt1:0 "Add §YCommittee of Union and Progress§! which grants:\n£drift_defence_texticon  Ideology drift defense: §G+5.0%§!\n"
+ TUR_inner_party_cult_tt2:0 "Several §Yadvisors§! would be able to §Yhired§! outside of §YPolitical Advisor§! slots, modifying §YCommittee of Union of Progress§! in the process."
  TUR_unity_of_the_party_and_the_state_tt:0 "Modify §YSecond Constitutional Era§! by\n£political_power_texticon  Political Power Gain: §G+5%§!\n£stability_popularity_texticon  Party Popularity Stability Modifier: §G+5.00%§!\n\n"
 
  TUR_legacy_of_the_4th_lancers:0 "Legacy of the 4th Lancers"
