--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1023,6 +1023,8 @@
  AUH_ottoman_debt_yes_opposite:0 "\n(§Y[AUH.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?AUH.opda_consumer_goods_opposite|.1%Y]"
  RUS_ottoman_debt_yes_opposite:0 "\n(§Y[RUS.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?RUS.opda_consumer_goods_opposite|.1%Y]"
  USA_ottoman_debt_yes_opposite:0 "\n(§Y[USA.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?USA.opda_consumer_goods_opposite|.1%Y]"
+ TUR_committee_of_union_and_progress:0 "Committee of Union and Progress"
+ TUR_committee_of_union_and_progress_desc:0 "İttihat ve Terakki Fırkası has established itself as a large party with wide reaching members. Though not all of it's members hold posts in the government, the unofficially retain power and influence the empire. The views and actions of certain individuals within the party shape the actions, thus the future of the empire."
 
  TUR_ottoman_industrial_investment:0 "Ottoman Industrial Investment"
  TUR_ottoman_military_mission:0 "Ottoman Military Mission"
