--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -270,14 +270,14 @@
  TUR_connections_on_all_sides:0 "Connections on all Sides"
  TUR_military_authority:0 "Military Authority"
  TUR_unionist_minister:0 "Unionist Minister"
- TUR_pragmatic_reformist:0 "Pragmatic Reformist"
- TUR_pragmatic_reformist_leader:0 "Pragmatic Reformist"
+ TUR_pluralist_ittihadist:0 "Pluralist İttihadist"
+ TUR_pluralist_ittihadist_leader:0 "Pluralist İttihadist"
  linchpin_of_infrastructure2:0 "Linchpin of Infrastructure"
  TUR_kucuk_efendi:0 "Küçük Efendi"
  TUR_resistance_organizer:0 "Resistance Organizer"
  TUR_cautious_reformist:0 "Cautious Reformist"
  TUR_three_pasha_locked_tt:0 "§YA member of the Triumvirate cannot be manually replaced or removed.§!"
- TUR_ahmet_riza:0 "Erudite Ideologue"
+ TUR_erudite_ideologue:0 "Erudite Ideologue"
  diplomatic_minister:0 "Diplomatic Minister"
  puppet_grand_vizier:0 "Puppet Grand Vizier"
  catalanist_lerrouxist:0 "Catalanist Lerrouxist"
@@ -453,4 +453,5 @@
  TUR_sympathetic_to_the_nationalist_cause:0 "Sympathetic to the Nationalist Cause"
  TUR_general_secretary_of_ittihadists:0 "General Secretart of İttihadist"
  TUR_ittihadist_propagandist:0 "İttihadist Propagandist"
- 
+ TUR_anatolian_literaturist:0 "Anatolian Literaturist"
+
