--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -993,7 +993,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  frankfurt_conference:0 "Frankfurt Conference"
  frankfurt_conference_desc:0 "Politicians from the Central Powers are debating how to divide the defeated countries territories and colonies and expand their empires and hegemonies."
  frankfurt_treaty:0 " Frankfurt Treaty "
- kis_war:0 "The §YGreat War§!"
+ kis_war:0 "The §YGreat War§! has started"
  great_war_loser:0 "Defeat in the §YGreat War§!"
  great_war_winner:0 "Victory in the §YGreat War§!"
  interbellum:0 "§YInterbellum§!"
@@ -2492,6 +2492,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_declare_jihad_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\nDivision Recovery Rate: §G+3.0%§!\nWeekly £war_support_modifiericons_texticon  War Support (Combat Casualties): §G+0.20%§!\n\n"
  TUR_renounce_our_claims:0 "Renounce our Claims"
  TUR_renounce_our_claims_desc:0 "Our empire has lost most of its lands in the recent years. Yet this upcoming war is a great opportunity for us to allign with a great power and claim some of our lost territories."
+ TUR_declare_nation_wide_martial_law:0 "Declare Nation Wide Martial Law"
+ TUR_declare_nation_wide_martial_law_desc:0 "Our capital has already been under martial law since the 31 March Incident. As we enter the Great War, it's the perfect opportunity to widen the range and effect of the martial law."
  TUR_army_of_a_bygone_era_name_1:0 "§YArmy of a Bygone Era§!"
  TUR_army_of_a_bygone_era_name_2:0 "§YArmy of the Modern Era§!"
  TUR_integrate_shia:0 "Integrate Shia Muslims in [FROM.GetName]"
